--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,3 +12,4 @@ jobs:
           ls -a
       - name: Simple JS Action
         id: greet
+        uses: actions/hello-world-javascript-action@main
